# SplitPay

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/expense_manager/: Cargo.toml
contracts/expense_manager/src/: lib.rs  test.rs
contracts/expense_manager/test_snapshots/test/: test_add_and_get_expense_equal_split.1.json  test_delete_expense.1.json  test_invalid_split_sum.1.json
contracts/group_manager/: Cargo.toml
contracts/group_manager/src/: lib.rs  test.rs
contracts/settlement_manager/: Cargo.toml
contracts/settlement_manager/src/: lib.rs  test.rs
contracts/settlement_manager/test_snapshots/test/: test_debt_netting.1.json  test_initialize_and_record_debt.1.json  test_settle_debt_manual.1.json  test_settle_debt_token.1.json
contracts/settlement_manager/test_snapshots/test/test/: test_custom_split_expense.1.json  test_debt_netting.1.json  test_equal_split_expense.1.json  test_expense_deletion_and_debt_reversal.1.json  test_group_creation_and_membership.1.json  test_manual_settlement.1.json  test_percentage_split_expense.1.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ActivityView.tsx  DashboardView.tsx  GroupsView.tsx  Header.tsx  StellarHubView.tsx
frontend/src/contracts/: config.ts  soroban.ts
frontend/src/hooks/: useContractsData.ts
stitch/add_new_expense/: code.html
stitch/aurelian_reserve/: DESIGN.md
stitch/goa_trip_details/: code.html
stitch/splitpay_dashboard/: code.html
stitch/splitpay_premium_expense_sharing/: code.html
(+3 files in other folders)
