[package]
name = "settlement_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = "22.0.1"
ed25519-dalek = "=2.2.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
group_manager = { path = "../group_manager" }
expense_manager = { path = "../expense_manager" }
